fixed subtask issue, now visible again

--- a/style/addTask/mainAddTask.css
+++ b/style/addTask/mainAddTask.css
@@ -699,7 +699,6 @@ form#taskFormOverlay {
   max-height: 50px;
   width: 432px;
   overflow-y: auto;
-  position: absolute;
 }
 
 .subtaskListOverlay li {
